score by minimum and maximum score values over multiple scores
